c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/do_while.c
int main(void) {
    int a = 1;
    do {
        a = a * 2;
    } while(a < 11);

    return a;
}
