c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/do_extra_semicolon.c
int main(void) {
    do {
        int a;
    }; while(1);
    return 0;
}